Add "Cashed today" data in History tab

--- a/src/assets/translations/de.json
+++ b/src/assets/translations/de.json
@@ -146,6 +146,7 @@
     },
     "history": {
       "title": "Verlauf der Transaktionen",
+      "cashedToday": "Heute eingelöst",
       "previous": "Vorherige",
       "noData": "Keine Daten",
       "total": "Insgesamt",
