--- a/src/assets/translations/es.json
+++ b/src/assets/translations/es.json
@@ -146,6 +146,7 @@
     },
     "history": {
       "title": "Historial de transacciones",
+      "cashedToday": "Recibido hoy",
       "previous": "Anterior",
       "noData": "Sin datos",
       "total": "Total",
