--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -215,12 +215,12 @@
       "invoicePaid": "Indirizzo verificato",
       "signWithAddress": "Firma con l'indirizzo",
       "signWithAddressDetails": "Firma il messaggio con questo indirizzo Bitcoin",
-      "receiveInBtcDescription1": "Tutti i bitcoin ricevuti tramite Swiss Bitcoin Pay saranno inviati all'indirizzo indicato.",
+      "receiveInBtcDescription1": "Il {{percent}}% dei bitcoins ricevuti tramite Swiss Bitcoin Pay saranno inviati all'indirizzo indicato.",
       "receiveInBtcDescription2": "Le conversioni da Lightning a Onchain e le commissioni dei miner sono sempre gratuite per te.",
       "receiveInBtcDescription3": "I pagamenti al vostro portafoglio vengono effettuati di default ogni 1° del mese. La soglia minima è di 1000 sats.",
       "receiveInBtcDescription3Lightning": "I tuoi bitcoin saranno inviati subito al tuo indirizzo lightning dopo ogni pagamento. Assicurati che il tuo nodo sia ben collegato.",
       "receiveInBtcDescription4": "Per dimostrarne la proprietà è necessaria una firma crittografica del wallet Bitcoin.",
-      "receiveInBankDescription1": "Tutti i bitcoin ricevuti tramite Swiss Bitcoin Pay saranno convertiti in {{currency}} e inviati automaticamente al tuo conto bancario tramite il nostro partner.",
+      "receiveInBankDescription1": "Il {{percent}}% dei bitcoins ricevuti tramite Swiss Bitcoin Pay saranno convertiti in {{currency}} e inviati automaticamente al tuo conto bancario tramite il nostro partner.",
       "bankSettings": "Impostazioni Bancarie",
       "receiveInBankDescription2Instant": "Il pagamento al tuo conto corrente viene effettuato automaticamente non appena il tuo saldo supera il minimo di {{formattedAmount}}.",
       "receiveInBankDescription2Batched": "Il pagamento al tuo conto corrente avviene automaticamente ogni giorno alle 0:00 UTC se il tuo saldo supera il minimo di {{formattedAmount}}.",
