--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -216,12 +216,12 @@
       "invoicePaid": "Address verified",
       "signWithAddress": "Sign with address",
       "signWithAddressDetails": "Sign the message with this Bitcoin address",
-      "receiveInBtcDescription1": "All the bitcoins that you charge via Swiss Bitcoin Pay will be sent to the address you provide.",
+      "receiveInBtcDescription1": "{{percent}}% of the bitcoins that you charge via Swiss Bitcoin Pay will be sent to the address you provide.",
       "receiveInBtcDescription2": "Lightning to Onchain conversions and miner fees are always free of charge for you.",
       "receiveInBtcDescription3": "Payments to your wallet are made by default every 1st of the month. Minimum threshold is 1000 sats.",
       "receiveInBtcDescription3Lightning": "Your bitcoins will be instantly sent to your lightning address after each payment. Make sure that your node is well connected.",
       "receiveInBtcDescription4": "A cryptographic signature of your Bitcoin wallet is required to prove ownership.",
-      "receiveInBankDescription1": "All the bitcoins that you charge via Swiss Bitcoin Pay will be sold for {{currency}} then sent automatically to your bank account through our partner",
+      "receiveInBankDescription1": "{{percent}}% of the bitcoins that you charge via Swiss Bitcoin Pay will be sold for {{currency}} then sent automatically to your bank account through our partner",
       "bankSettings": "Bank settings",
       "receiveInBankDescription2Instant": "The payment to your bank account is made automatically as soon as your balance exceeds the minimum of {{formattedAmount}}.",
       "receiveInBankDescription2Batched": "The payment to your bank account is automatically done everyday at 0:00 UTC once your balance exceeds the minimum of {{formattedAmount}}.",
