--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -216,7 +216,7 @@
       "invoicePaid": "Address verified",
       "signWithAddress": "Sign with address",
       "signWithAddressDetails": "Sign the message with this Bitcoin address",
-      "receiveInBtcDescription1": "{{percent}}% of the bitcoins that you charge via Swiss Bitcoin Pay will be sent to the address you provide.",
+      "receiveInBtcDescription1": "{{percent}}% of the bitcoins that you charge via Swiss Bitcoin Pay will be sent to the bitcoin wallet you provide.",
       "receiveInBtcDescription2": "Lightning to Onchain conversions and miner fees are always free of charge for you.",
       "receiveInBtcDescription3": "Payments to your wallet are made by default every 1st of the month. Minimum threshold is 1000 sats.",
       "receiveInBtcDescription3Lightning": "Your bitcoins will be instantly sent to your lightning address after each payment. Make sure that your node is well connected.",
